Fix Line 30 bug

--- a/Data Visualization.ipynb
+++ b/Data Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c56209d1",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "c54ca3fe",
    "metadata": {},
    "outputs": [
@@ -838,7 +838,7 @@
        "[26 rows x 400 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "f1225014",
    "metadata": {},
    "outputs": [],
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "0d515d92",
    "metadata": {},
    "outputs": [],
@@ -875,17 +875,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "ad805239",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['ba','pcc']] = df[['ba','pcc']].replace(to_replace={'notpresent':0,'present':1})"
+    "df[['ba','pcc']] = df[['ba','pcc']].replace(to_replace={'present':1})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "fde820b6",
    "metadata": {},
    "outputs": [],
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "3a0d6b33",
    "metadata": {},
    "outputs": [],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "72e12f0b",
    "metadata": {},
    "outputs": [
@@ -915,7 +915,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "122c16ae",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "72a7a95a",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "9a94fa68",
    "metadata": {},
    "outputs": [
